--- a/index.html
+++ b/index.html
@@ -145,10 +145,12 @@
       </div>
     </main>
   </section>
-
+  
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/Sylva2002">Christel SNVO</a>.
   </div>
+</footer>
 </body>
 </html>
